--- a/Adam/Adam/MoogDots -- Human Moog - Curve Screen55/Dependencies/IpCommunication/IpCommunication/IpCommunication.vcxproj
+++ b/Adam/Adam/MoogDots -- Human Moog - Curve Screen55/Dependencies/IpCommunication/IpCommunication/IpCommunication.vcxproj
@@ -75,6 +75,14 @@
   <ItemGroup>
     <Text Include="ReadMe.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="TcpClient.h" />
+    <ClInclude Include="TcpServer.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="TcpClient.cpp" />
+    <ClCompile Include="TcpServer.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
