--- a/Adam/Adam/MoogDots -- Human Moog - Curve Screen55/Dependencies/IpCommunication/IpCommunication/IpCommunication.vcxproj.filters
+++ b/Adam/Adam/MoogDots -- Human Moog - Curve Screen55/Dependencies/IpCommunication/IpCommunication/IpCommunication.vcxproj.filters
@@ -17,4 +17,20 @@
   <ItemGroup>
     <Text Include="ReadMe.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="TcpClient.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TcpServer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="TcpClient.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TcpServer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
