--- a/Adam/Adam/MoogDots -- Human Moog - Curve Screen55/Dependencies/IpCommunication/IpCommunication/IpCommunication.vcxproj
+++ b/Adam/Adam/MoogDots -- Human Moog - Curve Screen55/Dependencies/IpCommunication/IpCommunication/IpCommunication.vcxproj
@@ -53,6 +53,9 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <Lib>
+      <AdditionalDependencies>ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+    </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
