Added portdef to matlab communication.

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,15 @@ Adam/Adam/MoogDots -- Human Moog - Curve Screen55/Dependencies/IpCommunication/I
 *.sdf
 *.sdf
 *.suo
+*.sdf
+*.suo
+*.log
+*.log
+*.sdf
+*.suo
+*.log
+*.log
+*.vcxproj
+*.filters
+*.sdf
+*.suo
