Makw the IpCommunication sever as a threaded multi-client server.

--- a/Adam/Adam/MoogDots -- Human Moog - Curve Screen55/Dependencies/IpCommunication/IpCommunication/IpCommunication.vcxproj
+++ b/Adam/Adam/MoogDots -- Human Moog - Curve Screen55/Dependencies/IpCommunication/IpCommunication/IpCommunication.vcxproj
@@ -79,6 +79,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="PortsDef.h" />
     <ClInclude Include="TcpClient.h" />
     <ClInclude Include="TcpServer.h" />
   </ItemGroup>
