Added timeout int TcpClient that deal with matlab server multi port very fine - works.

--- a/Adam/Adam/MoogDots -- Human Moog - Curve Screen55/Dependencies/IpCommunication/IpCommunication/IpCommunication.vcxproj
+++ b/Adam/Adam/MoogDots -- Human Moog - Curve Screen55/Dependencies/IpCommunication/IpCommunication/IpCommunication.vcxproj
@@ -81,6 +81,7 @@
   <ItemGroup>
     <ClInclude Include="TcpClient.h" />
     <ClInclude Include="TcpServer.h" />
+    <ClInclude Include="Timer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TcpClient.cpp" />
