--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,10 @@ Adam/Adam/MoogDots -- Human Moog - Curve Screen55/Dependencies/IpCommunication/I
 *.filters
 *.sdf
 *.suo
+*.suo
+*.sdf
+*.suo
+*.log
+*.sdf
+*.filters
+*.vcxproj
