Add MatlabTcpCommunication lib to the Moogdots

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,23 @@ Adam/Adam/MoogDots -- Human Moog - Curve Screen55/Dependencies/IpCommunication/I
 *.sdf
 *.filters
 *.vcxproj
+Adam/Adam/MoogDots -- Human Moog - Curve Screen55/Dependencies/IpCommunication/IpCommunication.sdf
+*.suo
+*.sdf
+*.suo
+*.log
+*.sdf
+*.suo
+*.log
+*.vcxproj
+*.filters
+*.sdf
+*.suo
+*.obj
+*.log
+*.tlog
+*.pdb
+*.ipch
+*.obj
+*.exe
+*.txt
